# nim_duilib

./: .clang-format  .clang-tidy  .gitignore
.github/workflows/: ci.yml
creator/: CMakeLists.txt  CreatorApplication.cpp  CreatorApplication.h  MainForm.cpp  MainForm.h  MainThread.cpp  MainThread.h  README.md  main_linux.cpp  main_macos.mm  main_windows.cpp
creator/CodeGen/: CodeGenerator.cpp  CodeGenerator.h
creator/Core/: AlignmentTool.cpp  AlignmentTool.h  Clipboard.cpp  Clipboard.h  ControlMetadata.cpp  ControlMetadata.h  ControlNameTagger.cpp  ControlNameTagger.h  Document.cpp  Document.h  ProjectManager.cpp  ProjectManager.h  Selection.cpp  Selection.h  UndoManager.cpp  UndoManager.h
creator/Panels/: ControlTreePanel.cpp  ControlTreePanel.h  DesignCanvas.cpp  DesignCanvas.h  DragDropManager.cpp  DragDropManager.h  PropertyPanel.cpp  PropertyPanel.h  ResourcePanel.cpp  ResourcePanel.h  SelectionOverlay.cpp  SelectionOverlay.h  ToolboxPanel.cpp  ToolboxPanel.h  XmlEditorPanel.cpp  XmlEditorPanel.h
duilib/: CMakeLists.txt  duilib.h  duilib_config.h  duilib_string.h
duilib/Box/: SmartBox.h
duilib/CEFControl/internal/: CefBrowserHandler.cpp
duilib/Core/: CompiledResourceLoader.cpp  CompiledResourceLoader.h  Control.cpp  Control.h  ControlFactory.cpp  ControlFactory.h  ControlManager.h  EventBus.cpp  EventBus.h  GlobalManager.cpp  ResourceParam.h  UiColor.h  WindowBuilder.cpp  XmlBinaryCache.cpp  XmlBinaryCache.h
duilib/Lua/: LuaAdvancedControlBinding.cpp  LuaAdvancedControlBinding.h  LuaBoxBinding.cpp  LuaBoxBinding.h  LuaControlBinding.cpp  LuaControlBinding.h  LuaEngine.cpp  LuaEngine.h  LuaEventBinding.cpp  LuaEventBinding.h  LuaUtilBinding.cpp  LuaUtilBinding.h  LuaWindowBinding.cpp  LuaWindowBinding.h
duilib/Render/: RenderCache.cpp  RenderCache.h
duilib/ResourceCompiler/: ResourceCompiler.cpp  ResourceCompiler.h
duilib/Utils/: AttributeUtil.cpp  AttributeUtil.h  LogUtil.cpp  LogUtil.h  StringCharset.cpp  StringUtil.cpp
examples/render/: RenderTest2.cpp
tests/: CMakeLists.txt
tests/Core/: CompiledResourceLoaderTest.cpp  EventBusTest.cpp  test_ResourceParam.cpp  test_UiColor.cpp  test_UiColors.cpp  test_UiEstInt.cpp  test_UiFixedInt.cpp  test_UiFont.cpp  test_UiMargin.cpp  test_UiPadding.cpp  test_UiPoint.cpp  test_UiPointF.cpp  test_UiRect.cpp  test_UiRectF.cpp  test_UiSize.cpp  test_UiSize16.cpp  test_UiSize64.cpp  test_UiString.cpp  test_UiTypes.cpp  test_WindowCreateAttributes.cpp  test_WindowCreateParam.cpp
tests/Creator/: AlignmentToolTest.cpp  ClipboardTest.cpp  ControlMetadataTest.cpp  ControlNameTaggerTest.cpp  DocumentTest.cpp  DragDropManagerTest.cpp  MultiSelectionTest.cpp  SelectionOverlayTest.cpp  UndoManagerTest.cpp
tests/Lua/: LuaEngineTest.cpp
tests/ResourceCompiler/: ResourceCompilerTest.cpp  ResourceCompilerTest.h
tests/Utils/: test_FilePath.cpp  test_FilePathUtil.cpp  test_FileTime.cpp  test_FileUtil.cpp  test_LogUtil.cpp  test_StringCharset.cpp  test_StringConvert.cpp  test_StringUtil.cpp
